--- a/Washington_SGP_Report_2013.Rmd
+++ b/Washington_SGP_Report_2013.Rmd
@@ -189,7 +189,7 @@ Using all available Reading, Mathematics, EOC Mathematics 1 and EOC Mathematics 
 The results in all subjects are excellent with a few exceptions. In grade 4, for example, deviations from perfect fit are indicated by red and blue shading.  The further *above* 10 the darker the red, and the further *below* 10 the darker the blue. In instances where large deviations from 10 occur, the likely cause is that there is a point mass associated with certain scale scores that makes it impossible to "split" the score at a dividing point forcing a majority of the scores into an adjacent cell. This is the case with all large deviations observed in the Washington data. 
 
 ## Student Level Results
-To investigate the possibility that individual level misfit might impact summary level results, student growth percentile analyses were run on all students and the results were examined relative to prior achievement. With perfect fit to data, the correlation between students' most recent prior achievement scores and their student growth percentiles is zero. (i.e., the goodness of fit tables would have a uniform distribution of percentiles across all previous scale score levels). To investigate in another way, correlations between prior student scale scores and student growth percentiles were calculated.[$^2$](#footnotes) The results are presented in Table <script> var studentCorrelations = tableNum++; </script><script> document.write(studentCorrelations); </script>:
+To investigate the possibility that individual level misfit might impact summary level results, student growth percentile analyses were run on all students and the results were examined relative to prior achievement. With perfect fit to data, the correlation between students' most recent prior achievement scores and their student growth percentiles is zero (i.e., the goodness of fit tables would have a uniform distribution of percentiles across all previous scale score levels). To investigate in another way, correlations between prior student scale scores and student growth percentiles were calculated.[$^2$](#footnotes) The results are presented in Table <script> var studentCorrelations = tableNum++; </script><script> document.write(studentCorrelations); </script>:
 
 ```{r, cache=TRUE, echo=FALSE, include=FALSE}
 	t4 <- Washington_SGP@Data[YEAR=='2012_2013'][,list(Correlation =round(cor(SGP, SCALE_SCORE_PRIOR_STANDARDIZED, use="pairwise.complete.obs"), 3)), by=c('CONTENT_AREA', 'GRADE')][!is.na(Correlation)]
