Fix reference and section links within documents

--- a/Washington_SGP_Report_2013.Rmd
+++ b/Washington_SGP_Report_2013.Rmd
@@ -154,7 +154,7 @@ Based upon perfect model fit to the data, the median of all state growth percent
 It is important to note how, at the entire state level, the *normative* growth information returns very little information. What the results indicate is that a typical (or average) student in the state demonstrates 50th percentile growth. That is, "typical students" demonstrate "typical growth". The power of the normative results follows when subgroups are examined (e.g., schools, district, demographic groups, etc.) Examining subgroups in terms of the median of their student growth percentiles, it is then possible to investigate why some subgroups display lower/higher student growth than others. Moreover, because the subgroup summary statistic (i.e., the median) is composed of many individual student growth percentiles, one can break out the result and further examine the distribution of individual results. 
 
 ## Adequate Growth (Growth to Standard) <a id="adequate-growth">
-To fully understand the rates of student growth in the state, it is necessary to complement the normative growth results with a standard based interpretation. These so called growth-to-standard results currently find favor in the growth model approved for using as AYP criteria under No Child Left Behind (NCLB). Whereas normative growth answers the question "What is?", growth-to-standard analyses attempt to establish a threshold answering "What should be?". If universal proficiency is the goal of the education system, then growth adequacy can be anchored to that achievement target.  Please refer to [section 5.5](defining-adequate-growth) for a more detailed discussion of "Adequate Growth".
+To fully understand the rates of student growth in the state, it is necessary to complement the normative growth results with a standard based interpretation. These so called growth-to-standard results currently find favor in the growth model approved for using as AYP criteria under No Child Left Behind (NCLB). Whereas normative growth answers the question "What is?", growth-to-standard analyses attempt to establish a threshold answering "What should be?". If universal proficiency is the goal of the education system, then growth adequacy can be anchored to that achievement target.  Please refer to [section 5.5](#defining-adequate-growth) for a more detailed discussion of "Adequate Growth".
 	<script type="text/javascript"> var pctAdqGrowth = tableNum++; </script>
 
 The top panel of Table <script> document.write(pctAdqGrowth); </script> below shows the percent of students that are predicted to be on track to either "Catch Up" (attain proficiency if they match or exceed the level of growth demonstrated in 2013 for the next two years) or "Keep up" (maintain proficiency with consistent growth over two years).  The second panel depicts the percent of students who are on track to either "Move Up" to advanced (attain the highest proficiency level with consistent growth) or "Stay Up" (maintain the advanced proficiency level).
@@ -222,7 +222,7 @@ students associated with a current school (quantified as percent at/above profic
 results indicate that on average, students attending schools serving lower achieving students tend to demonstrate less exemplary growth than those 
 attending schools serving higher achieving students. Equivalently, based upon ordinary least squares (OLS) regression assumptions, the prior achievement level of students attending
 a school accounts for between 1 and 10 percent of the variability observed in student growth. There are no definitive numbers on what this correlation 
-should be, but recent studies on value-added models show similar results [(McCaffrey, Han, and Lockwood, 2008)](mccahan2008).
+should be, but recent studies on value-added models show similar results [(McCaffrey, Han, and Lockwood, 2008)](#mccahan2008).
 
 ### School Level Results
 <script type="text/javascript"> var bubble_read_prior = figNum++; </script>
@@ -512,7 +512,7 @@ The following are the steps that transpire over 3 years to determine whether thi
     * Last, the 3 year growth percentile projections/trajectories are established. The student's actual grades 3 & 4 scale scores together with the 99 hypothetical 1 and 2 year growth percentile projections/trajectories derived in the previous two steps are plugged into the coefficient matrix relating grade 7 with prior achievement in grades 3, 4, 5 & 6. This yields the percentile cuts for each student indicating what three consecutive years of 1<sup>st</sup> through 99<sup>th</sup> percentile growth will lead to in terms of future achievement.  The student's observed 2014 growth percentile is again compared to the percentile cut required to reach proficiency, and if it exceeds it her growth is deemed adequate enough to reach proficiency by the 7<sup>th</sup> grade. 
 
 This process repeats in a similar fashion as the student progresses from one grade to the next, year after year.  The complexity of the process just described is minimized by the use of the 
-`R` software environment [(R Core Team, 2013)](#rsoftware2013) in conjunction with an open source software package `SGP` [(Betebenner, VanIwaarden, Domingue & Shang, 2013)](sgp2013) developed 
+`R` software environment [(R Core Team, 2013)](#rsoftware2013) in conjunction with an open source software package `SGP` [(Betebenner, VanIwaarden, Domingue & Shang, 2013)](#sgp2013) developed 
 by the National Center for the Improvement of Educational Assessment in consultation with the Washington State Office of Superintendent of Public Instruction (OSPI) to calculate student growth 
 percentiles and percentile growth projections/trajectories. Every year, following the completion of the WCAP score reconciliation, student growth percentiles and percentile growth 
 trajectories are calculated for each student. Once calculated, these values are easily used to make the yes/no determinations about the adequacy of each student's growth relative to 
@@ -676,7 +676,7 @@ better capture the greater variability at both ends of the scale score range tog
 </div>
 
 Calculation of student growth percentiles is performed using `R` [(R Core Team , 2013)](#rsoftware2013), a language and environment for statistical computing, with `SGP` 
-package [(Betebenner, VanIwaarden, Domingue & Shang, 2013)](sgp2013). Other possible software (untested with regard to student growth percentiles) with quantile regression 
+package [(Betebenner, VanIwaarden, Domingue & Shang, 2013)](#sgp2013). Other possible software (untested with regard to student growth percentiles) with quantile regression 
 capability include SAS and Stata. Estimation of student growth percentiles is conducted using all available prior data, subject to certain suitability conditions. 
 Given assessment scores for $t$ occasions, ($t \geq 2$), the $\tau$-th conditional quantile for $Y_ t$ based upon $Y_ {t-1}, Y_ {t-2}, \ldots, Y_1$ is given by
 
@@ -696,7 +696,7 @@ Student growth percentiles possess a number of attractive properties from both a
 is that the percentile descriptions are familiar and easily communicated to teachers and other non-technical stakeholders. Furthermore, implicit within the percentile 
 quantification of student growth is a statement of probability. Questions of "how much growth is enough?" or "how much is a year's growth?" ask stakeholders to establish 
 growth percentile thresholds deemed adequate. These thresholds establish growth standards that translate to probability statements. In this manner, percentile based growth 
-forms a basis for discussion of rigorous yet  attainable growth standards for all children supplying a normative context for [Linn's (2003)](linn2003a) existence proof 
+forms a basis for discussion of rigorous yet  attainable growth standards for all children supplying a normative context for [Linn's (2003)](#linn2003a) existence proof 
 with regard to student level growth.
 
 In addition to practical utility, student growth percentiles possess a number of technical attributes well suited for use with assessment scores. The more important 
@@ -704,7 +704,7 @@ theoretical properties of growth percentiles include:
 
 *  **Robustness to outliers** Estimation of student growth percentiles are more robust to outliers than is traditionally the case with conditional mean estimation. Analogous to the property of the median being less influenced by outliers than is the median, conditional quantiles are robust to extreme observations. This is due to the fact that influence of a point on the $\tau$-th conditional quantile function is not proportional (as is the case with the mean) to the distance of the point from the quantile function but only to its position above or below the function [(Koenker, 2005, p. 44)](#koenker2005).
 
-*  **Uncorrelated** with prior achievement] Analogous to least squares derived residuals being uncorrelated with independent variables, student growth percentiles are not correlated with prior achievement. This property runs counter to current multilevel approaches to measuring growth with testing occasion nested within students [(Singer & Willet, 2003)](singwill2003). These models, requiring a vertical scale, fit lines with distinct slopes and intercepts to each student. The slopes of these lines represent an average rate of increase, usually measured in scale score points per year, for the student. Whereas a steeper slope represents more learning, it is important to understand that using a normative quantification of growth, one cannot necessarily  infer that a low achieving student with a growth percentile of 60 "learned as much" as a high achieving student with the same growth percentile. Growth percentiles bypass questions associated with magnitude of learning and focus on normatively quantifying changes in achievement. 
+*  **Uncorrelated** with prior achievement] Analogous to least squares derived residuals being uncorrelated with independent variables, student growth percentiles are not correlated with prior achievement. This property runs counter to current multilevel approaches to measuring growth with testing occasion nested within students [(Singer & Willet, 2003)](#singwill2003). These models, requiring a vertical scale, fit lines with distinct slopes and intercepts to each student. The slopes of these lines represent an average rate of increase, usually measured in scale score points per year, for the student. Whereas a steeper slope represents more learning, it is important to understand that using a normative quantification of growth, one cannot necessarily  infer that a low achieving student with a growth percentile of 60 "learned as much" as a high achieving student with the same growth percentile. Growth percentiles bypass questions associated with magnitude of learning and focus on normatively quantifying changes in achievement. 
 
 *  **Equivariance** to monotone transformation of scale] An important attribute of the quantile regression methodology used to calculate student growth percentiles is their invariance to monotone transformations of scale. This property, denoted by [(Koenker, 2005)](#koenker2005) as *equivariance to monotone transformations* is particularly helpful in educational assessment where a variety of scales are present for analysis, most of which are related by some monotone transformation. For example, it is a common misconception that one needs a vertical scale in order to calculate growth. Because vertical and non-vertical scales are related via a monotone transformation, the student growth percentiles do not change given such alterations in the underlying scale. This result obviates much of the discussion concerning the need for a vertical scale in measuring growth.[$^{11}$](#footnotes)
 
